<resources>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">BeatIt!</string>
    <string name="MainActivity">Main Activity</string>
    <string name="description">Description</string>
    <string name="duration">Duration:</string>
    <string name="duration_value">1 week</string>
    <string name="to_beat">To beat:</string>
    <string name="points"> points</string>
    <string name="points_value">2000 points</string>
    <string name="speed">Speed:</string>
    <string name="speed_value">Speed: 0.0 km/h</string>
    <string name="start_time">Start time:</string>
    <string name="finish_time">Finish time:</string>
    <string name="start_time_value">18/08/2014 13:30</string>
    <string name="time_left">Time left:</string>
    <string name="time_left_value_1">Time Left: 30 seconds</string>
    <string name="time_left_value_2">Time Left: 90 seconds</string>
    <string name="title_activity_challenge_in_progress">ChallengeInProgress</string>
    <string name="title_activity_challenges_menu">ChallengesMenu</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_challenge_finished">ChallengeFinished</string>
    <string name="title_activity_login">Login</string>
    <string name="score">Score</string>
    <string name="score_value">1503 points</string>
    <string name="max_speed">Max. Speed</string>
    <string name="avg_speed">Avg. Speed</string>
    <string name="max_speed_value">24.5</string>
    <string name="avg_speed_value">21.3</string>
    <string name="end_time">Finish hour: </string>
    <string name="end_time_value">20/07/2014 9:50</string>
    <string name="gps_disabled">Please turn on the GPS</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="speed_greater_than_zero">You must be standing still to begin the challenge</string>
    <string name="challenges_tab">Challenges</string>
    <string name="profile_tab">Profile</string>
    <string name="ranking_tab">Ranking</string>
    <string name="logout">Log out</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="public_profile">Public Profile</string>
    <string name="app_description">Do You think you\'re the most skilled?\n\nRegister with your Facebook account and get access to 10 amazing challenges!\nBe the best around the world, beats everyone with your skills and compare your performance in the global ranking.\nTake more risks, more challenges, more fun!</string>
    <string name="iniciar_sesion">Log In</string>
    <string name="title_activity_home">Home</string>
    <string name="start_challenge_button">Start Challenge</string>
	<string name="max_score">Max. Score</string>
	<string name="last_score">Last Score</string>
	<string name="logout_confirmation_title">Are you sure you want to log out?</string>
	<string name="logout_confirmation">All unsaved data will be lost</string>
	<string name="challenge_completed">Challenge Not Completed!</string>
	<string name="want_to_continue">Do you want to continue?</string>
	<string name="continue_button">Continue</string>
	<string name="view_finished">Finish</string>
	<string name="version">Version: </string>
	<string name="attempts">Attempts: </string>
	<string name="years"> years</string>
	<string name="months"> months</string>
	<string name="days"> days</string>
	<string name="hours"> hours</string>
	<string name="minutes"> minutes</string>
	<string name="seconds"> seconds</string>
	<string name="few_seconds">A few seconds</string>
	<string name="year"> year</string>
	<string name="month"> month</string>
	<string name="day"> day</string>
	<string name="hour"> hour</string>
	<string name="minute"> minute</string>
	<string name="second"> second</string>
	<string name="week"> week</string>
	<string name="weeks"> weeks</string>
	<string name="challenge_under_construction">This challenge is under construction, it may contain errors.</string>
	<string name="challenge_under_construction_title">Do you want to continue?</string>
	<string name="saving_progress">Saving your progress</string>
	<string name="please_wait">Please wait..</string>
	<string name="loading_progress">Loading your progress</string>
	<string name="updating_ranking">Updating ranking</string>
	<string name="no_connection">You\'re ofline!</string>
	<string name="no_connection_message">You are logged out and lost unsaved data</string>
    <string name="username">Juan Pérez</string>
    <string name="user_country">Uruguay</string>
    <string name="usain_bolt">Usain Bolt</string>
    <string name="description_usain_bolt_1">In this challenge you have to run faster than 10 km/h for 30 seconds.</string>
    <string name="description_usain_bolt_2">In this challenge you have to run faster than 15 km/h for 45 seconds.</string>
    <string name="logo_description">Logo Usain Bolt</string>
	<string name="can_you_play">Can You Play?</string>
    <string name="select_contact">Select a Contact</string>
    <string name="send_sms">Send SMS</string>
    <string name="facebook_post">Post on Facebook</string>
    <string name="done">Done!</string>
    <string name="sms_text">Try BeatIt!</string>
    <string name="sms_failed">Your sms has failed..</string>
    <string name="sms_success">Your sms has successfully sent!</string>
    <string name="fb_posts">Facebook Posts</string>
    <string name="sms_sent">SMS sent</string>
    <string name="android_version">Android Version</string>
    <string name="also_available">Also available for Windows Phone</string>
    <string name="can_you_play_description_1">In this challenge you have to post a link on your Facebook and, also, send two SMS with the link to two different contacts.\nRemember more friends more score!</string>
    <string name="can_you_play_description_2">In this challenge you have to post a link on your Facebook and, also, send four SMS with the link to four different contacts.\nRemember more friends more score!</string>
   	<string name="select_diferent_contact">Select a different contact</string>
   	<string name="select_another_contact">Select another contact</string>
   	<string name="facebook_app_not_installed">The Facebook App is not installed, but you can continue</string>
   	<string name="challenge_not_completed">Challenge not completed!</string>
    <string name="wake_me_up">Wake Me Up</string>
    <string name="description_wake_me_up_1">In this challenge you have to shake your phone when you thinks the timer has ended.\nThe timer will hide three times, so pay attention.</string>
    <string name="description_wake_me_up_2">In this challenge you have to shake your phone when you thinks the timer has ended.\nThe timer will hide four times, so pay attention.</string>
    <string name="logo_wake_me_up">Wake Me Up Logo</string>
    <string name="restart">Restart</string>
    <string name="success">Success !</string>
    <string name="fail">Fail</string>
    <string name="shut_the_dog">Shut The Dog</string>
    <string name="description_shut_the_dog_1">In this challenge you have to shut the barking dog up by putting your hand close to the phone as soon as possible.\nThe dog will bark three times.</string>
    <string name="description_shut_the_dog_2">In this challenge you have to shut the barking dog up by putting your hand close to the phone as soon as possible.\nThe dog will bark five times</string>
    <string name="logo_shut_the_dog">Logo Shut The Dog</string>
    <string name="shut_the_dog_started">Game Started! Pay Attention to the sound!</string>
    <string name="shut_the_dog_lost">You lost! :( Try again!</string>
    <string name="bouncing_game">Bouncing Game</string>
    <string name="description_bouncing_game_1">In this challenge you have to bump the red ball against gray as many times as possible.\nYou only have 45 seconds!.</string>
    <string name="description_bouncing_game_2">In this challenge you have to bump the red ball against gray as many times as possible.\nYou only have 45 seconds!.</string>
    <string name="logo_bouncing_game">Bouncing Game Logo</string>
    <string name="song_complete">Song Quiz</string>
    <string name="description_song_complete_1">In this challenge you have to guess the song\'s name of each song that will be played for 10 seconds.\nRemember there will be 5 songs!</string>
    <string name="description_song_complete_2">In this challenge you have to guess the artist\'s name of each song that will be played for 10 seconds.\nRemember there will be 5 songs!</string>
    <string name="logo_song_complete">Logo Song Complete</string>
    <string name="song_complete_started">Game Started! Pay Attention to the sound!</string>
    <string name="song_complete_lost">You lost! :( Try again!</string>
    <string name="text_and_color">Text &amp; Color</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="violet">VIOLET</string>
    <string name="red">RED</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="yellow">YELLOW</string>
    <string name="orange">ORANGE</string>
        <string name="description_text_and_color_1">In this challenge you have to decide whether the text and color match.\nYou have 60 seconds to hit as many as possible.</string>
    <string name="description_text_and_color_2">In this challenge you have to decide whether the text and color match.\nYou have 45 seconds to hit as many as possible.</string>
    <string name="catch_me">Catch Me</string>
    <string name="description_catch_me_1">In this challenge you have to press lighted circles as quickly as possible. Hurry up, you only have 45 seconds!\nRemember, the faster, the highest score!
</string>
    <string name="description_catch_me_2">In this challenge you have to press lighted circles as quickly as possible. Hurry up, you only have 30 seconds!\nRemember, the faster, the highest score!
</string>
    <string name="throw_the_phone">Throw The Phone</string>
    <string name="descritpion_throw_the_phone_1">In this challenge you have to throw the phone upward one meter at a minimum height.\nRemember, the higher higher score!</string>
    <string name="descritpion_throw_the_phone_2">In this challenge you have to throw the phone upward two meters at a minimum height.\nRemember, the higher higher score!</string>
    <string name="attention">Attention!</string>
    <string name="attention_text">Before launching the device up, try to have a proper position to catch it when it comes down, we are NOT responsabe for any damage of your cellphone</string>
    <string name="come_on">Come on!</string>
    <string name="im_scared">I\'m scared!</string>
    <string name="ready_to_fly">I\'m ready to fly!</string>
    <string name="selfie_group">Selfie Groupie</string>
    <string name="description_selfie_group_1">In this challenge you have to take a picture with two or more people.\nRemember that more faces in the pictures, means highest score!</string>
    <string name="description_selfie_group_2">In this challenge you have to take a picture with five or more people.\nRemember that more faces in the pictures, means highest score!</string>
    <string name="light_dialog">Please keep in mind that should be distinguished either faces, look forward to some place with good light.</string>
    <string name="calculating">Calculating the number of people..</string>
    <string name="facebook_app_id">829846350380023</string>
</resources>