<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".MainActivity" >

	<ImageView
	    android:id="@+id/imageView_Logo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/textView_Nombre_Desafio"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="22dp"
	    android:adjustViewBounds="true"
	    android:contentDescription="@string/logo_description"
	    android:src="@drawable/ic_usain_bolt" />
       
	<TextView
	    android:id="@+id/textView_Nombre_Desafio"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="15dp"
	    android:layout_toRightOf="@+id/textView_Duration"
	    android:text="@string/challenge"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textColor="@color/verde"
	    android:textSize="34sp"
	    android:textStyle="bold" />

       <TextView
        android:id="@+id/textView_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView_Logo"
        android:layout_below="@+id/imageView_Logo"
        android:layout_marginTop="14dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/textView_Description_Value_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_Description"
        android:layout_below="@+id/textView_Description"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/description_usain_bolt_2"
        android:textColor="@color/gris_challenge_description"
        android:textSize="18sp" />

	<TextView
		android:id="@+id/textView_Start_Time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/textView_Description_Value_2"
		android:layout_below="@+id/textView_Description_Value_2"
		android:layout_marginTop="19dp"
		android:text="@string/start_time"
		android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView_Duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_Start_Time"
        android:layout_below="@+id/textView_Start_Time"
        android:layout_marginTop="23dp"
        android:text="@string/duration"
        android:textAppearance="?android:attr/textAppearanceMedium" />
 
    <TextView
        android:id="@+id/textView_Duration_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_To_Beat"
        android:layout_alignLeft="@+id/textView_Start_Time_Value"
        android:text="@string/duration_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gris_challenge_values"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView_To_Beat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_Duration"
        android:layout_below="@+id/textView_Duration"
        android:layout_marginTop="24dp"
        android:text="@string/points"
        android:textAppearance="?android:attr/textAppearanceMedium" />

   	<View
   	    android:id="@+id/caja_verde"
   	    android:layout_width="250dp"
   	    android:layout_height="40dp"
   	    android:layout_below="@+id/textView_To_Beat"
   	    android:layout_centerHorizontal="true"
   	    android:layout_marginTop="25dp"
   	    android:background="@color/verde" >
</View>
   	
	<View
	    android:id="@+id/caja_roja"
	    android:layout_width="250dp"
	    android:layout_height="40dp"
	    android:layout_below="@+id/caja_verde"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="20dp"
	    android:background="@color/rojo" >
</View>

	<TextView
	    android:id="@+id/textView_Speed"
   	    android:gravity="center"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/caja_roja"
	    android:layout_marginBottom="13dp"
	    android:layout_alignRight="@+id/textView_Time_Left"
	    android:text="@string/speed"
	    android:textColor="#FFFFFF"
	    android:textStyle="bold"
	    android:textSize="14sp" />

	<TextView
	    android:id="@+id/textView_Speed_Value"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/caja_roja"
	    android:layout_marginBottom="13dp"
	    android:layout_alignLeft="@+id/textView_Time_Left_Value"
	    android:text="@string/speed_value"
	    android:textColor="#FFFFFF"
	    android:textStyle="bold"
	    android:textSize="14sp" />

	<TextView
	    android:id="@+id/textView_To_Beat_Value"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/textView_Duration_Value"
	    android:layout_alignTop="@+id/textView_To_Beat"
	    android:text="@string/points_value"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="@color/gris_challenge_values"
	    android:textSize="14sp" />

	<TextView
	    android:id="@+id/textView_Start_Time_Value"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/textView_Duration"
	    android:layout_alignLeft="@+id/textView_Time_Left_Value"
	    android:layout_marginLeft="15dp"
	    android:text="@string/start_time_value"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="@color/gris_challenge_values"
	    android:textSize="14sp" />

	<TextView
	    android:id="@+id/textView_Time_Left"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/caja_verde"
	    android:layout_toLeftOf="@+id/textView_Time_Left_Value"
	    android:gravity="center"
	    android:text="@string/time_left"
	    android:textColor="#FFFFFF"
	    android:textSize="14sp"
	    android:textStyle="bold" />

	<TextView
	    android:id="@+id/textView_Time_Left_Value"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/caja_verde"
	    android:layout_marginLeft="28dp"
	    android:layout_toRightOf="@+id/textView_Description"
	    android:gravity="center"
	    android:text="@string/time_left_value_2"
	    android:textColor="#FFFFFF"
	    android:textSize="14sp"
	    android:textStyle="bold" />

</RelativeLayout>