<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView_Duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_Start_Time"
        android:layout_below="@+id/textView_Start_Time"
        android:layout_marginTop="29dp"
        android:text="@string/duration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_To_Beat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_Duration"
        android:layout_below="@+id/textView_Duration"
        android:layout_marginTop="29dp"
        android:text="@string/to_beat"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_To_Beat_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_To_Beat"
        android:layout_below="@+id/textView_To_Beat"
        android:text="@string/points_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gris_challenge_values"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView_Duration_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_Duration"
        android:layout_below="@+id/textView_Duration"
        android:text="@string/duration_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gris_challenge_values"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView_Start_Time_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_Start_Time"
        android:layout_below="@+id/textView_Start_Time"
        android:text="@string/week"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gris_challenge_values"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView_Start_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_Description_Value_2"
        android:layout_below="@+id/textView_Description_Value_2"
        android:layout_marginTop="15dp"
        android:text="@string/start_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_Description_Value_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_Description"
        android:layout_alignRight="@+id/challenge_name_layout"
        android:layout_below="@+id/textView_Description"
        android:text="@string/description_shut_the_dog_1"
        android:textColor="@color/gris_challenge_description"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/challenge_name_layout"
        android:layout_below="@+id/challenge_name_layout"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/challenge_name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="15dp" >

        <ImageView
            android:id="@+id/imageView_Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_shut_the_dog"
            android:src="@drawable/ic_throw_the_phone" />

        <TextView
            android:id="@+id/textView_Challenge_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@+id/imageView_Logo"
            android:text="@string/throw_the_phone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/shutthedog"
            android:textSize="34sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <Button
        android:id="@+id/start_challenge_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textView_To_Beat_Value"
        android:layout_alignRight="@+id/textView_Description_Value_2"
        android:layout_below="@+id/textView_To_Beat_Value"
        android:layout_marginTop="15dp"
        android:background="@color/shutthedog"
        android:text="@string/start_challenge_button"
        android:textColor="@color/blanco"
        android:visibility="visible" />
    
</RelativeLayout>