<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris" >

    <com.facebook.widget.ProfilePictureView
        android:id="@+id/imageView_profile"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/textView_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView_profile"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/imageView_profile"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/textView_user_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView_profile"
        android:layout_alignLeft="@+id/textView_username"
        android:layout_marginBottom="10dp"
        android:text="@string/user_country"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_cerrar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/textView_user_country"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/textView_user_country"
        android:text="@string/logout"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/linea"
        android:layout_width="300dp"
        android:layout_height="3dp"
        android:layout_below="@+id/imageView_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#cccccc"
        android:orientation="vertical" >

    </LinearLayout>

    <TextView
        android:id="@+id/textView_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView_profile"
        android:layout_below="@+id/linea"
        android:layout_marginTop="15dp"
        android:text="@string/settings"
        android:textColor="@color/verde"
        android:textSize="19sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/switch_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_settings"
        android:layout_below="@+id/textView_settings"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/notifications" />

    <Switch
        android:id="@+id/switch_public_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switch_notifications"
        android:layout_below="@+id/switch_notifications"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/public_profile" />
 
</RelativeLayout>